# tinyrag

./: .gitignore  LICENSE  README.md  pyproject.toml  pyrightconfig.json
src/tinyrag/: __init__.py  embeddings.py  main.py
