[project]
name = "tinyrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tinytune>=0.0.9",
    "torch==2.4.1 ; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "torch==2.4.1+cpu ; sys_platform != 'darwin'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
index-strategy = "unsafe-best-match"
extra-index-url = ["https://download.pytorch.org/whl/cpu"]
